[package]
name = "nhk-radio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
m3u8-rs = "6.0"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
rodio = "0.19"
symphonia = { version = "0.5", features = ["aac", "all-formats", "all-codecs"] }
log = "0.4"
env_logger = "0.11"
url = "2.5"
