[package]
edition = "2024"
name = "nhk-radio-player"
version = "0.1.0"

[dependencies]
aes = "0.8"
anyhow = "1.0"
cbc = "0.1"
clap = {version = "4.5", features = ["derive"]}
env_logger = "0.11"
hex = "0.4"
log = "0.4"
m3u8-rs = "6.0"
reqwest = {version = "0.12", features = ["json"]}
rodio = "0.19"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.6"
serde_json = "1.0"
symphonia = {version = "0.5", features = ["aac", "all-formats", "all-codecs"]}
tokio = {version = "1.42", features = ["full"]}
unicode-width = "0.2"
url = "2.5"
